--- a/README
+++ b/README
@@ -6,8 +6,10 @@ Software and PDF copies of papers:
 
 
 QUICKSTART:
-The executables in the tar file have been linked in such a way that they should
-work without any non-standard dependencies on an x86_64 Linux system.
+If you downloaded a tarball then the executables in the archive will have been 
+linked in such a way that they should work without any additional dependencies 
+on an x86_64 Linux system.
+
 
 The tools are:
 
@@ -21,7 +23,6 @@ ccmain.native  : separation logic consistency checker for inductive definitions.
 
 Running an executable without arguments will print out instructions for use. 
 Running "make all-tests" will run a test suite for some provers.
-See the Makefile for other possibilities.
 
 The theory/design behind the first three provers is described in   
 
@@ -30,14 +31,16 @@ The theory/design behind the first three provers is described in
 
 
 COMPILING:
-To compile things from scratch you will need to cd into the directory 
-src/soundness and follow the README included there.
+To compile things from scratch you will need the following:
 
-In addition, you will need:
-OCaml native tools (tested with 4.01 but should work with 3.12), menhir and 
-ocaml-melt.  
+* OCaml (tested with 4.01) [Debian packages: ocaml-nox, ocaml-native-compilers]
+* g++ and headers (tested with 4.8) [Debian packages: g++, libstdc++-4.8-dev]
+* Menhir (tested with 20130116) [Debian package: menhir] 
+* Melt (tested with 1.4.0) [Debian package: ocaml-melt]
+* Spot (tested with 1.1.4) [sources at http://spot.lip6.fr/wiki/ ]  
 
-In non-standard installations you may need to change the paths in the Makefile.
+In non-standard installations you may need to change the paths in the top
+of myocamlbuild.ml.
 
 Then, just run "make" and hopefully it should work :) 
 
