--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 CONTACT:
-For help to get things working: nikos.gorogiannis (at) gmail (dot) com
+Questions and help to get things working: nikos.gorogiannis (at) gmail (dot) com
 Software and PDF copies of papers: 
 
   http://www.cs.mdx.ac.uk/staffpages/nikosgkorogiannis/  
@@ -11,23 +11,31 @@ linked in such a way that they should work without any additional dependencies
 on an x86_64 Linux system.
 
 
-The tools are:
+The binaries are named <system>_{prove,abduce,check}.native (not all combinations
+exist).  Systems are logical fragments equipped with inductive predicate
+definitions.  Binaries with `prove' in the name are theorem provers.  Binaries
+with `abduce' in the name are theorem provers that abduce inductive definitions
+(for now, inductively defined preconditions for programs).  
 
-fomain.native  : first-order prover.
-slmain.native  : separation logic entailment prover.
-prmain.native  : program termination prover for a goto language (unmaintained). 
-abdmain.native : inductive precondition abducer for a goto language (unmaintained). 
-pr2main.native  : program termination prover for a while language. 
-abd2main.native : inductive precondition abducer for a while language. 
-ccmain.native  : separation logic consistency checker for inductive definitions.
+The systems supported are:
+
+fo: A fragment of first-order logic.
+sl: A fragment of separation logic.
+goto: A heap-manipulating goto programming language with specifications in
+  separation logic, meant for proving termination.
+while: A heap-manipulating while programming language with specifications in
+  separation logic, meant for proving termination and/or safety.
+
+slsat_check is a satisfiability checker for separation logic symbolic heaps
+with inductive definitions.   
 
 Running an executable without arguments will print out instructions for use. 
 Running "make all-tests" will run a test suite for some provers.
 
 The theory/design behind the first three provers is described in   
 
-  James Brotherston, Nikos Gorogiannis, and Rasmus L. Petersen. 
-  A generic cyclic theorem prover, accepted for publication in APLAS, 2012.
+  J. Brotherston, N. Gorogiannis, and R. L. Petersen. A generic cyclic theorem
+  prover. In Proc. APLAS-10, pages 350-367. Springer, 2012.
 
 
 COMPILING:
