Split out sl_heap. THAT WAS A PAIN.

--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 [TODO] modularise/abstract variables, formulas, definitions for SL
+[TODO] rationalise unification interface across all modules
 [TODO] drop melt as a dependency and re-do the required stuff locally
 [TODO] consider hash consing for terms formulas etc
 [TODO] consider patricia trees and maps for most uses
