--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
+[TODO] fix up tagging assumptions
 [TODO] modularise/abstract variables, formulas, definitions for SL
 [TODO] rationalise unification interface across all modules
 [TODO] drop melt as a dependency and re-do the required stuff locally
