--- a/sl-data/todo
+++ b/sl-data/todo
@@ -11,6 +11,17 @@
 ===========================================================
 ===========================================================
 
+
+note from Jame:
+
+instantation of Cyclist with first-order logic:
+ a predicate "N" for natural numbers and associated proof rules for unfolding
+
+that one way to get started would simply be to import those definitions directly into Cyclist_SL,
+ and then start adding term constructors for addition, multiplication, etc.
+
+===========================================================
+
 #tests/sl/25.tst
 
 ./sl_prove.native -S "ls(x,t) * ls(t,y) * bt(y) * y!=nil |- ls(x,y) * bt(y)"
@@ -21,15 +32,20 @@ NOT proved: nil!=y * ls^1(x, t) * ls^2(t, y) * bt^3(y) |- ls^4(x, y) * bt^5(y) [
 
 
 ===========================================================
-note from Jame:
+#read sequent from file: DONE
 
-instantation of Cyclist with first-order logic:
- a predicate "N" for natural numbers and associated proof rules for unfolding
+./sl_prove.native tests/sl/1.tst
 
-that one way to get started would simply be to import those definitions directly into Cyclist_SL,
- and then start adding term constructors for addition, multiplication, etc.
+GOT
+-----
+./sl_prove.native: Stray argument found..
 
-===========================================================
+
+EXPECTED
+-----
+work well and output result as
+ ./sl_prove.native -S "x->y * RList(y,z) |- RList(x,z)"
+
 ===========================================================
 ===========================================================
 ===========================================================
