added new grammar and todo

--- a/src/sldata/todo
+++ b/src/sldata/todo
@@ -1,17 +1,5 @@
 
 
-===========================================================
-===========================================================
-===========================================================
-===========================================================
-===========================================================
-===========================================================
-===========================================================
-===========================================================
-===========================================================
-===========================================================
-
-
 note from Jame:
 
 instantation of Cyclist with first-order logic:
@@ -19,6 +7,19 @@ instantation of Cyclist with first-order logic:
 
 that one way to get started would simply be to import those definitions directly into Cyclist_SL,
  and then start adding term constructors for addition, multiplication, etc.
+
+=======================================================
+
+- new grammar that support heap + pure
+- implement the new grammar
+  - works for sl only examples. care of performace lost
+  - work for fo only examples
+    - combination
+       + induction
+       + arimethic (consider to use z3 + omega)
+
+- sl + data: one induction
+- sl + data: several induction
 
 ===========================================================
 
@@ -45,6 +46,26 @@ EXPECTED
 -----
 work well and output result as
  ./sl_prove.native -S "x->y * RList(y,z) |- RList(x,z)"
+
+===========================================================
+# 01-sl-data.defs (parse sl-data.defs)
+
+./sl_prove.native -D sl-data/01-sl-data.defs sl-data/ex0.tst
+
+===========================================================
+# ex1-d-uf.tst (prove sl+data (without induction))
+
+./sl_prove.native sl-data/01-sl-data.defs sl-data/ex1-d-uf.tst
+
+===========================================================
+===========================================================
+===========================================================
+===========================================================
+===========================================================
+===========================================================
+===========================================================
+===========================================================
+
 
 ===========================================================
 ===========================================================
