--- a/tests/whl2/tpdb_examples/README
+++ b/tests/whl2/tpdb_examples/README
@@ -5,3 +5,7 @@ Database (version 10.3):
 	
 The directory structure and filenames mirror that of the database in order that
 one may easily determine which examples the benchmarks correspond to.
+
+Some benchmarks are duplicated by others; this is indicated by a filename
+without an extension, the contents of which is a relative path to the test that
+is being duplicated.
